// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`backend-statement index ast: ast 1`] = `
Object {
  "body": Array [
    Object {
      "innerComments": Array [],
      "key": "connect_timeout",
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 24,
          "line": 2,
          "offset": 50,
        },
        "start": Object {
          "column": 3,
          "line": 2,
          "offset": 29,
        },
      },
      "trailingComments": Array [],
      "type": "BackendDefinition",
      "value": Object {
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 23,
            "line": 2,
            "offset": 49,
          },
          "start": Object {
            "column": 22,
            "line": 2,
            "offset": 48,
          },
        },
        "trailingComments": Array [],
        "type": "DurationLiteral",
        "value": "1s",
      },
    },
    Object {
      "innerComments": Array [],
      "key": "dynamic",
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 18,
          "line": 3,
          "offset": 69,
        },
        "start": Object {
          "column": 3,
          "line": 3,
          "offset": 54,
        },
      },
      "trailingComments": Array [],
      "type": "BackendDefinition",
      "value": Object {
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 17,
            "line": 3,
            "offset": 68,
          },
          "start": Object {
            "column": 14,
            "line": 3,
            "offset": 65,
          },
        },
        "trailingComments": Array [],
        "type": "BooleanLiteral",
        "value": "true",
      },
    },
    Object {
      "innerComments": Array [],
      "key": "port",
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 16,
          "line": 4,
          "offset": 86,
        },
        "start": Object {
          "column": 3,
          "line": 4,
          "offset": 73,
        },
      },
      "trailingComments": Array [],
      "type": "BackendDefinition",
      "value": Object {
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 15,
            "line": 4,
            "offset": 85,
          },
          "start": Object {
            "column": 11,
            "line": 4,
            "offset": 81,
          },
        },
        "trailingComments": Array [],
        "type": "StringLiteral",
        "value": "\\"443\\"",
      },
    },
    Object {
      "innerComments": Array [],
      "key": "host",
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 24,
          "line": 5,
          "offset": 111,
        },
        "start": Object {
          "column": 3,
          "line": 5,
          "offset": 90,
        },
      },
      "trailingComments": Array [],
      "type": "BackendDefinition",
      "value": Object {
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 23,
            "line": 5,
            "offset": 110,
          },
          "start": Object {
            "column": 11,
            "line": 5,
            "offset": 98,
          },
        },
        "trailingComments": Array [],
        "type": "StringLiteral",
        "value": "\\"vaceline.io\\"",
      },
    },
    Object {
      "innerComments": Array [],
      "key": "first_byte_timeout",
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 27,
          "line": 6,
          "offset": 139,
        },
        "start": Object {
          "column": 3,
          "line": 6,
          "offset": 115,
        },
      },
      "trailingComments": Array [],
      "type": "BackendDefinition",
      "value": Object {
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 26,
            "line": 6,
            "offset": 138,
          },
          "start": Object {
            "column": 25,
            "line": 6,
            "offset": 137,
          },
        },
        "trailingComments": Array [],
        "type": "DurationLiteral",
        "value": "5s",
      },
    },
    Object {
      "innerComments": Array [],
      "key": "max_connections",
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 25,
          "line": 7,
          "offset": 165,
        },
        "start": Object {
          "column": 3,
          "line": 7,
          "offset": 143,
        },
      },
      "trailingComments": Array [],
      "type": "BackendDefinition",
      "value": Object {
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 24,
            "line": 7,
            "offset": 164,
          },
          "start": Object {
            "column": 22,
            "line": 7,
            "offset": 162,
          },
        },
        "trailingComments": Array [],
        "type": "NumericLiteral",
        "value": "100",
      },
    },
    Object {
      "innerComments": Array [],
      "key": "between_bytes_timeout",
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 31,
          "line": 8,
          "offset": 197,
        },
        "start": Object {
          "column": 3,
          "line": 8,
          "offset": 169,
        },
      },
      "trailingComments": Array [],
      "type": "BackendDefinition",
      "value": Object {
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 30,
            "line": 8,
            "offset": 196,
          },
          "start": Object {
            "column": 28,
            "line": 8,
            "offset": 194,
          },
        },
        "trailingComments": Array [],
        "type": "DurationLiteral",
        "value": "10s",
      },
    },
    Object {
      "innerComments": Array [],
      "key": "ssl",
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 14,
          "line": 9,
          "offset": 212,
        },
        "start": Object {
          "column": 3,
          "line": 9,
          "offset": 201,
        },
      },
      "trailingComments": Array [],
      "type": "BackendDefinition",
      "value": Object {
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 13,
            "line": 9,
            "offset": 211,
          },
          "start": Object {
            "column": 10,
            "line": 9,
            "offset": 208,
          },
        },
        "trailingComments": Array [],
        "type": "BooleanLiteral",
        "value": "true",
      },
    },
    Object {
      "innerComments": Array [],
      "key": "probe",
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 18,
          "offset": 474,
        },
        "start": Object {
          "column": 3,
          "line": 10,
          "offset": 216,
        },
      },
      "trailingComments": Array [],
      "type": "BackendDefinition",
      "value": Array [
        Object {
          "innerComments": Array [],
          "key": "request",
          "leadingComments": Array [],
          "loc": Object {
            "end": Object {
              "column": 118,
              "line": 11,
              "offset": 344,
            },
            "start": Object {
              "column": 5,
              "line": 11,
              "offset": 231,
            },
          },
          "trailingComments": Array [],
          "type": "BackendDefinition",
          "value": Object {
            "body": Array [
              Object {
                "innerComments": Array [],
                "leadingComments": Array [],
                "loc": Object {
                  "end": Object {
                    "column": 42,
                    "line": 11,
                    "offset": 268,
                  },
                  "start": Object {
                    "column": 16,
                    "line": 11,
                    "offset": 242,
                  },
                },
                "trailingComments": Array [],
                "type": "StringLiteral",
                "value": "\\"GET /healthcheck HTTP/1.1\\"",
              },
              Object {
                "innerComments": Array [],
                "leadingComments": Array [],
                "loc": Object {
                  "end": Object {
                    "column": 62,
                    "line": 11,
                    "offset": 288,
                  },
                  "start": Object {
                    "column": 44,
                    "line": 11,
                    "offset": 270,
                  },
                },
                "trailingComments": Array [],
                "type": "StringLiteral",
                "value": "\\"Host: vaceline.io\\"",
              },
              Object {
                "innerComments": Array [],
                "leadingComments": Array [],
                "loc": Object {
                  "end": Object {
                    "column": 82,
                    "line": 11,
                    "offset": 308,
                  },
                  "start": Object {
                    "column": 64,
                    "line": 11,
                    "offset": 290,
                  },
                },
                "trailingComments": Array [],
                "type": "StringLiteral",
                "value": "\\"Connection: close\\"",
              },
              Object {
                "innerComments": Array [],
                "leadingComments": Array [],
                "loc": Object {
                  "end": Object {
                    "column": 117,
                    "line": 11,
                    "offset": 343,
                  },
                  "start": Object {
                    "column": 84,
                    "line": 11,
                    "offset": 310,
                  },
                },
                "trailingComments": Array [],
                "type": "StringLiteral",
                "value": "\\"User-Agent: Vaceline healthcheck\\"",
              },
            ],
            "innerComments": Array [],
            "leadingComments": Array [],
            "loc": Object {
              "end": Object {
                "column": 117,
                "line": 11,
                "offset": 343,
              },
              "start": Object {
                "column": 16,
                "line": 11,
                "offset": 242,
              },
            },
            "trailingComments": Array [],
            "type": "ConcatExpression",
          },
        },
        Object {
          "innerComments": Array [],
          "key": "threshold",
          "leadingComments": Array [],
          "loc": Object {
            "end": Object {
              "column": 19,
              "line": 12,
              "offset": 364,
            },
            "start": Object {
              "column": 5,
              "line": 12,
              "offset": 350,
            },
          },
          "trailingComments": Array [],
          "type": "BackendDefinition",
          "value": Object {
            "innerComments": Array [],
            "leadingComments": Array [],
            "loc": Object {
              "end": Object {
                "column": 18,
                "line": 12,
                "offset": 363,
              },
              "start": Object {
                "column": 18,
                "line": 12,
                "offset": 363,
              },
            },
            "trailingComments": Array [],
            "type": "NumericLiteral",
            "value": "1",
          },
        },
        Object {
          "innerComments": Array [],
          "key": "window",
          "leadingComments": Array [],
          "loc": Object {
            "end": Object {
              "column": 16,
              "line": 13,
              "offset": 381,
            },
            "start": Object {
              "column": 5,
              "line": 13,
              "offset": 370,
            },
          },
          "trailingComments": Array [],
          "type": "BackendDefinition",
          "value": Object {
            "innerComments": Array [],
            "leadingComments": Array [],
            "loc": Object {
              "end": Object {
                "column": 15,
                "line": 13,
                "offset": 380,
              },
              "start": Object {
                "column": 15,
                "line": 13,
                "offset": 380,
              },
            },
            "trailingComments": Array [],
            "type": "NumericLiteral",
            "value": "2",
          },
        },
        Object {
          "innerComments": Array [],
          "key": "timeout",
          "leadingComments": Array [],
          "loc": Object {
            "end": Object {
              "column": 19,
              "line": 14,
              "offset": 401,
            },
            "start": Object {
              "column": 5,
              "line": 14,
              "offset": 387,
            },
          },
          "trailingComments": Array [],
          "type": "BackendDefinition",
          "value": Object {
            "innerComments": Array [],
            "leadingComments": Array [],
            "loc": Object {
              "end": Object {
                "column": 18,
                "line": 14,
                "offset": 400,
              },
              "start": Object {
                "column": 16,
                "line": 14,
                "offset": 398,
              },
            },
            "trailingComments": Array [],
            "type": "DurationLiteral",
            "value": "10s",
          },
        },
        Object {
          "innerComments": Array [],
          "key": "initial",
          "leadingComments": Array [],
          "loc": Object {
            "end": Object {
              "column": 17,
              "line": 15,
              "offset": 419,
            },
            "start": Object {
              "column": 5,
              "line": 15,
              "offset": 407,
            },
          },
          "trailingComments": Array [],
          "type": "BackendDefinition",
          "value": Object {
            "innerComments": Array [],
            "leadingComments": Array [],
            "loc": Object {
              "end": Object {
                "column": 16,
                "line": 15,
                "offset": 418,
              },
              "start": Object {
                "column": 16,
                "line": 15,
                "offset": 418,
              },
            },
            "trailingComments": Array [],
            "type": "NumericLiteral",
            "value": "1",
          },
        },
        Object {
          "innerComments": Array [],
          "key": "expected_response",
          "leadingComments": Array [],
          "loc": Object {
            "end": Object {
              "column": 29,
              "line": 16,
              "offset": 449,
            },
            "start": Object {
              "column": 5,
              "line": 16,
              "offset": 425,
            },
          },
          "trailingComments": Array [],
          "type": "BackendDefinition",
          "value": Object {
            "innerComments": Array [],
            "leadingComments": Array [],
            "loc": Object {
              "end": Object {
                "column": 28,
                "line": 16,
                "offset": 448,
              },
              "start": Object {
                "column": 26,
                "line": 16,
                "offset": 446,
              },
            },
            "trailingComments": Array [],
            "type": "NumericLiteral",
            "value": "200",
          },
        },
        Object {
          "innerComments": Array [],
          "key": "interval",
          "leadingComments": Array [],
          "loc": Object {
            "end": Object {
              "column": 20,
              "line": 17,
              "offset": 470,
            },
            "start": Object {
              "column": 5,
              "line": 17,
              "offset": 455,
            },
          },
          "trailingComments": Array [],
          "type": "BackendDefinition",
          "value": Object {
            "innerComments": Array [],
            "leadingComments": Array [],
            "loc": Object {
              "end": Object {
                "column": 19,
                "line": 17,
                "offset": 469,
              },
              "start": Object {
                "column": 17,
                "line": 17,
                "offset": 467,
              },
            },
            "trailingComments": Array [],
            "type": "DurationLiteral",
            "value": "60s",
          },
        },
      ],
    },
  ],
  "id": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 24,
        "line": 1,
        "offset": 23,
      },
      "start": Object {
        "column": 9,
        "line": 1,
        "offset": 8,
      },
    },
    "name": "vaceline_backend",
    "trailingComments": Array [],
    "type": "Identifier",
  },
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 1,
      "line": 19,
      "offset": 476,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "trailingComments": Array [],
  "type": "BackendStatement",
}
`;

exports[`backend-statement index format: format long 1`] = `
backend vaceline_backend {
  .connect_timeout = 1s;
  .dynamic = true;
  .port = "443";
  .host = "vaceline.io";
  .first_byte_timeout = 5s;
  .max_connections = 100;
  .between_bytes_timeout = 10s;
  .ssl = true;
  .probe = {
    .request = "GET /healthcheck HTTP/1.1" "Host: vaceline.io" "Connection: close" "User-Agent: Vaceline healthcheck";
    .threshold = 1;
    .window = 2;
    .timeout = 10s;
    .initial = 1;
    .expected_response = 200;
    .interval = 60s;
  }
}
`;

exports[`backend-statement index format: format short 1`] = `
backend vaceline_backend {
  .connect_timeout = 1s;
  .dynamic = true;
  .port = "443";
  .host = "vaceline.io";
  .first_byte_timeout = 5s;
  .max_connections = 100;
  .between_bytes_timeout = 10s;
  .ssl = true;
  .probe = {
    .request = "GET /healthcheck HTTP/1.1"
      "Host: vaceline.io"
      "Connection: close"
      "User-Agent: Vaceline healthcheck";
    .threshold = 1;
    .window = 2;
    .timeout = 10s;
    .initial = 1;
    .expected_response = 200;
    .interval = 60s;
  }
}
`;

exports[`backend-statement index token 1`] = `
Array [
  backend,
  vaceline_backend,
  {,
  .,
  connect_timeout,
  =,
  1,
  s,
  ;,
  .,
  dynamic,
  =,
  true,
  ;,
  .,
  port,
  =,
  "443",
  ;,
  .,
  host,
  =,
  "vaceline.io",
  ;,
  .,
  first_byte_timeout,
  =,
  5,
  s,
  ;,
  .,
  max_connections,
  =,
  100,
  ;,
  .,
  between_bytes_timeout,
  =,
  10,
  s,
  ;,
  .,
  ssl,
  =,
  true,
  ;,
  .,
  probe,
  =,
  {,
  .,
  request,
  =,
  "GET /healthcheck HTTP/1.1",
  "Host: vaceline.io",
  "Connection: close",
  "User-Agent: Vaceline healthcheck",
  ;,
  .,
  threshold,
  =,
  1,
  ;,
  .,
  window,
  =,
  2,
  ;,
  .,
  timeout,
  =,
  10,
  s,
  ;,
  .,
  initial,
  =,
  1,
  ;,
  .,
  expected_response,
  =,
  200,
  ;,
  .,
  interval,
  =,
  60,
  s,
  ;,
  },
  },
]
`;
